# my-trader

./: .gitignore  README.md  bootstrap.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
app/: app.py  app_enhanced.py
data/raw/: spy.csv  tbill_3m.csv
docs/: concepts.md
scripts/: backtest_mc_predictive.py  build_strategy_comparison_report.py  run_backtests.py  run_backtests_with_cash_and_sweep.py  run_montecarlo.py  run_montecarlo_after_tax.py  run_montecarlo_cone.py  run_montecarlo_with_cash.py  run_placeholder.py  sanity_check.py  setup_env.sh
src/quant_sim_lab/backtest/: engine.py
src/quant_sim_lab/config/: tax.py
src/quant_sim_lab/data/: loader.py
src/quant_sim_lab/risk/: metrics.py  tax.py  tax_annual.py
src/quant_sim_lab/sim/: monte_carlo.py
src/quant_sim_lab/strategies/: buy_and_hold.py  sma_trend.py
tests/: test_smoke.py
